--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -29,6 +29,13 @@
             <label for="slide4"></label>
             <label for="slide5"></label>
         </div>
+        <div class="blocktext">
+            <div class="text text1">Слайд 1</div>
+            <div class="text text2">Слайд 2</div>
+            <div class="text text3">Слайд 3</div>
+            <div class="text text4">Слайд 4</div>
+            <div class="text text5">Слайд 5</div>
+        </div>
     </div>
 </body>
 
