--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -30,11 +30,11 @@
             <label for="slide5"></label>
         </div>
         <div class="blocktext">
-            <div class="text text1">Слайд 1</div>
-            <div class="text text2">Слайд 2</div>
-            <div class="text text3">Слайд 3</div>
-            <div class="text text4">Слайд 4</div>
-            <div class="text text5">Слайд 5</div>
+            <div class="text text1">Когда зашел в группу к Дастероводам</div>
+            <div class="text text2">Улыбаемся и пашем</div>
+            <div class="text text3">Желтый, тут кто-то есть!</div>
+            <div class="text text4">Денег нет, но вы держитесь!</div>
+            <div class="text text5">Фейки... Они повсюду...</div>
         </div>
     </div>
 </body>
